--- a/index.html
+++ b/index.html
@@ -18,11 +18,16 @@
       <!-- Mensagens aparecerão aqui -->
     </div>
 
-    <div class="flex space-x-3 pt-2">
+    <div class="flex flex-wrap gap-2 pt-2">
       <input id="entrada" type="text" placeholder="Digite sua pergunta..."
              class="flex-1 px-5 py-3 rounded-lg bg-gray-700 text-white border border-gray-600 focus:outline-none focus:ring-2 focus:ring-blue-500 text-lg" />
       <button onclick="enviar()"
               class="px-6 py-3 bg-blue-500 hover:bg-blue-600 rounded-lg font-semibold text-lg">Enviar</button>
+      <a href="mapa.html" target="_blank">
+        <button class="px-6 py-3 bg-green-600 hover:bg-green-700 rounded-lg font-semibold text-lg">
+          🌍 Ver Mapa
+        </button>
+      </a>
     </div>
   </div>
 
